--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <p>I CAN HAVE THE TIME</p><br>
   <div id="txt" class="clock"></div>
   <div class="images">
-     <img class="" id="" src="./images/Cat_sleep.jpg">
+     <img class="" id="lolCat" src="./images/Cat_sleep.jpg">
+     <blockquote id="timeEvent"></blockquote>
 
   </div><!--images biter-->
 
@@ -33,7 +34,7 @@
          <option value="6">6AM-7AM</option>
          <option value="7">7AM-8AM</option>
          <option value="8">8AM-9AM</option>
-         <option value="9">9AM-10AM</option>
+         <option id="wakeupcat" value="9">9AM-10AM</option><!--uyanış-->>
          <option value="10">10AM-11AM</option>
          <option value="11">11AM-12PM</option>
          <option value="12">12PM-1PM</option>
@@ -68,7 +69,7 @@
           <option value="11">11AM-12PM</option>
           <option value="12">12PM-1PM</option>
           <option value="13">1PM-2PM</option>
-          <option value="14">2PM-3PM</option>
+          <option id="lunch" value="14">2PM-3PM</option><!--yemek-->>
           <option value="15">3PM-4PM</option>
           <option value="16">4PM-5PM</option>
           <option value="17">5PM-6PM</option>
@@ -98,7 +99,7 @@
           <option value="12">12PM-1PM</option>
           <option value="13">1PM-2PM</option>
           <option value="14">2PM-3PM</option>
-          <option value="15">3PM-4PM</option>
+          <option id="naptime" value="15">3PM-4PM</option><!--uyku-->>
           <option value="16">4PM-5PM</option>
           <option value="17">5PM-6PM</option>
           <option value="18">6PM-7PM</option>
@@ -114,7 +115,7 @@
   
    </div> <!--container biter-->
    
-    <button class="party">Party Time!</button>
+ <button onclick="partycats()" class="party" id="party-btn">Party Time!</button>
   <footer>Made by Alper A.</footer>
 </body>
 </html>
